# LLVM_WriteAnalysis

./: .gitignore  CMakeLists.txt  SecurityPassCheckpoint1.cpp  SecuritySensitivityPass.cpp  SecuritySensitivityPass.h  SecurityState.cpp  SecurityState.h  WriteAnalysis.cpp  compute_score.py  readme.md
